unpackaged/main/default/objects/Subscription__c/fields/Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Activation_Date__c</fullName>
    <description>Date and time when this subscription activates</description>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>