unpackaged/main/default/objects/Subscription__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <inlineHelpText>Amount paid by the customer after applied discounts (if any)</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>