unpackaged/main/default/objects/Subscription__c/fields/Amount_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Amount_Subtotal__c</fullName>
    <description>Total amount for the subscription before any applied discounts</description>
    <label>Amount Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>