unpackaged/main/default/objects/Subscription__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Date and time when this subscription expires</description>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>