unpackaged/main/default/objects/Subscription__c/fields/Gearset_Team__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Gearset Team</label>
    <referenceTo>Gearset_Team__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>