unpackaged/main/default/objects/Subscription__c/fields/License_Id__c.field-meta.xml
<CustomField>
    <fullName>License_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ID of the license associated with this subscription</inlineHelpText>
    <label>License Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>