unpackaged/main/default/objects/Subscription__c/fields/Order_reference__c.field-meta.xml
<CustomField>
    <fullName>Order_reference__c</fullName>
    <label>Order reference</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>